# django-project-template

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  heroku.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
project_name/: __init__.py
project_name/api/: apps.py  urls.py
project_name/theme/: apps.py
project_name/theme/management/commands/: collectstatic.py
project_name/theme/static_src/: package-lock.json  package.json  tailwind.config.js
project_name/theme/static_src/src/: styles.css
project_name/users/: admin.py  factories.py  forms.py  models.py  serializers.py  views.py
project_name/users/fixtures/: initial.json
templates/: _base.html
tests/: conftest.py
