[tool.poetry]
name = "django-project-template"
version = "1.0.0"
description = ""
authors = ["Raúl Negrón <raul.esteban.negron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "3.2.14"
djangorestframework = "3.14.0"
django-model-utils = "4.3.1"
django-extensions = "3.2.1"
dj-database-url = "1.2.0"
psycopg2 = "2.9.5"
django-filter = "22.1"
gunicorn = "20.1.0"
python-dotenv = "0.21.0"
django-allauth = "0.52.0"
argon2-cffi = "21.3.0"
sentry-sdk = "1.13.0"
whitenoise = "6.3.0"
celery = "5.2.7"
django-celery-beat = "2.4.0"
requests = "2.28.2"
redis = "4.4.2"
django-htmx = "1.13.0"
django-tailwind = "3.4.0"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
django-debug-toolbar = "3.8.1"
isort = "5.11.4"
pre-commit = "2.21.0"
pytest = "7.2.0"
pytest-django = "4.5.2"
factory-boy = "3.2.1"
flake8 = "6.0.0"
djangorestframework-stubs = "1.8.0"
django-stubs = "1.13.1"
mypy = "0.981"

[tool.mypy]
python_version = '3.11'
warn_return_any = "True"
warn_unused_configs = "True"
warn_no_return = "True"
warn_redundant_casts = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
exclude = [
    "migrations/*",
]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"


[tool.black]
line-length = 88
target-version = ['py311']
exclude = '(\.eggs|\.git|\.mypy_cache|\.venv|_build|build|dist|.*\/migrations\/.*)'

[build-system]
requires = ["poetry_core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
