[tool.poetry]
name = "django-project-template"
version = "1.0.0"
description = ""
authors = ["Raúl Negrón <raul.esteban.negron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.5"
djangorestframework = "3.14.0"
django-model-utils = "4.3.1"
django-extensions = "3.2.3"
dj-database-url = "2.1.0"
psycopg2 = "2.9.7"
django-filter = "23.3"
gunicorn = "21.2.0"
python-dotenv = "1.0.0"
django-allauth = "0.56.1"
argon2-cffi = "23.1.0"
sentry-sdk = "1.31.0"
whitenoise = "6.5.0"
celery = "5.3.4"
django-celery-beat = "2.5.0"
requests = "2.31.0"
redis = "5.0.0"
django-htmx = "1.16.0"
django-tailwind = "3.6.0"

[tool.poetry.group.dev.dependencies]
black = "23.9.1"
django-debug-toolbar = "4.2.0"
isort = "5.12.0"
pre-commit = "3.4.0"
pytest = "7.4.2"
pytest-django = "4.5.2"
factory-boy = "3.3.0"
flake8 = "6.1.0"
djangorestframework-stubs = "3.14.2"
django-stubs = "4.2.4"
mypy = "<1.5"

[tool.mypy]
python_version = '3.11'
warn_return_any = "True"
warn_unused_configs = "True"
warn_no_return = "True"
warn_redundant_casts = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
exclude = [
    "migrations/*",
]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"


[tool.black]
line-length = 88
target-version = ['py311']
exclude = '(\.eggs|\.git|\.mypy_cache|\.venv|_build|build|dist|.*\/migrations\/.*)'

[build-system]
requires = ["poetry_core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
