[tool.poetry]
name = "django-project-template"
version = "1.0.0"
description = ""
authors = ["Raúl Negrón <raul.esteban.negron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Django = "4.2.11"
djangorestframework = "3.15.1"
django-model-utils = "4.5.0"
django-extensions = "3.2.3"
dj-database-url = "2.1.0"
psycopg2 = "2.9.9"
django-filter = "23.5"
gunicorn = "22.0.0"
python-dotenv = "1.0.1"
django-allauth = "0.61.1"
argon2-cffi = "23.1.0"
sentry-sdk = "1.45.0"
whitenoise = "6.6.0"
celery = "5.4.0"
django-celery-beat = "2.6.0"
requests = "2.31.0"
redis = "5.0.3"
django-htmx = "1.17.3"
django-tailwind = "3.8.0"
django-browser-reload = "1.12.1"

[tool.poetry.group.dev.dependencies]
black = "24.4.0"
django-debug-toolbar = "4.3.0"
isort = "5.13.1"
pre-commit = "3.4.0"
pytest = "8.1.1"
pytest-django = "4.8.0"
factory-boy = "3.3.0"
flake8 = "7.0.0"
djangorestframework-stubs = "3.14.5"
django-stubs = "4.2.7"
mypy = "1.7.1"

[tool.mypy]
python_version = '3.12'
warn_return_any = "True"
warn_unused_configs = "True"
warn_no_return = "True"
warn_redundant_casts = "True"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
exclude = [
    "migrations/*",
]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.test"


[tool.black]
line-length = 88
target-version = ['py312']
exclude = '(\.eggs|\.git|\.mypy_cache|\.venv|_build|build|dist|.*\/migrations\/.*)'

[build-system]
requires = ["poetry_core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
